--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <img src="sound/sound.wav" alt="">
     <div class="popup">
         <img src="image/iconClose.png" class="popup__close" alt="">
     </div>
